--- a/app/src/main/res/layout/activity_add_complaint.xml
+++ b/app/src/main/res/layout/activity_add_complaint.xml
@@ -41,7 +41,7 @@
                 android:id="@+id/et_comp_category"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-
+                android:focusable="false"
                 android:hint="Complaint Category"
                 android:padding="5dp"
                 android:paddingTop="10dp"
@@ -58,6 +58,7 @@
                 android:layout_height="wrap_content"
                 android:hint="Threat Level"
                 android:padding="5dp"
+                android:focusable="false"
                 android:textColor="#000000"
                 app:mtf_openKeyboardOnFocus="true"
                 fbutton:met_floatingLabel="highlight" />
