--- a/app/src/main/res/layout/content_home.xml
+++ b/app/src/main/res/layout/content_home.xml
@@ -4,19 +4,67 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:padding="16dp"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="com.complus.community.HomeActivity"
     tools:showIn="@layout/app_bar_home">
 
-    <Button
-        android:id="@+id/btn_claim_points"
-        android:layout_centerVertical="true"
+    <RelativeLayout
+        android:id="@+id/circle"
+        android:layout_width="200dp"
+        android:layout_height="200dp"
+        android:gravity="center"
         android:layout_centerHorizontal="true"
-        android:background="@color/tw__composer_red"
+        android:layout_gravity="center"
+        android:background="@drawable/oval" >
+
+        <TextView
+            android:id="@+id/tv_point"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:textStyle="bold"
+            android:textSize="50dp"
+            android:textColor="@color/tw__composer_white"
+            android:text="200" />
+    </RelativeLayout>
+
+
+    <Button
+        android:layout_marginTop="10dp"
+        android:id="@+id/btn_claim_points"
+        android:layout_below="@id/circle"
+        android:background="@color/colorAccent"
         android:text="Claim Points"
         android:textAlignment="center"
         android:textColor="@color/tw__solid_white"
-        android:layout_width="160dp"
-        android:layout_height="80dp" />
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+
+    <FrameLayout
+        android:layout_below="@id/btn_claim_points"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <ListView
+            android:id="@+id/lv_recents"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:divider="@color/tw__solid_white">
+
+        </ListView>
+
+        <!--<TextView-->
+            <!--android:id="@+id/tv_empty_list"-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:layout_marginTop="200dp"-->
+            <!--android:text="No recents available"-->
+            <!--android:textAlignment="center"-->
+            <!--android:textSize="25sp" />-->
+        <!---->
+    </FrameLayout>
+
+
 
 </RelativeLayout>
