--- a/app/src/main/res/menu/navigation_rewards.xml
+++ b/app/src/main/res/menu/navigation_rewards.xml
@@ -2,18 +2,13 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
-        android:id="@+id/navigation_home"
+        android:id="@+id/leaderboard_overall"
         android:icon="@drawable/ic_home_black_24dp"
-        android:title="@string/title_home" />
+        android:title="Overall" />
 
     <item
-        android:id="@+id/navigation_dashboard"
+        android:id="@+id/leaderboard_local"
         android:icon="@drawable/ic_dashboard_black_24dp"
-        android:title="@string/title_dashboard" />
-
-    <item
-        android:id="@+id/navigation_notifications"
-        android:icon="@drawable/ic_notifications_black_24dp"
-        android:title="@string/title_notifications" />
+        android:title="Local" />
 
 </menu>
