--- a/app/src/main/res/layout/leaderboard_item.xml
+++ b/app/src/main/res/layout/leaderboard_item.xml
@@ -3,14 +3,37 @@
     android:orientation="horizontal" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+
     <TextView
-        android:id="@+id/leaderboard_item_name"
+        android:text="100"
+        android:id="@+id/leaderboard_item_rank"
+        android:layout_weight="1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
 
     <TextView
-        android:id="@+id/leaderboard_item_points"
+        android:text="abcd"
+        android:id="@+id/leaderboard_item_name"
+        android:layout_weight="25"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
+
+
+    <RelativeLayout
+        android:id="@+id/circle"
+        android:layout_weight="1"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:background="@drawable/oval" >
+
+        <TextView
+            android:id="@+id/leaderboard_item_points"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:textStyle="bold"
+            android:textColor="@color/tw__composer_white"
+            android:text="200" />
+    </RelativeLayout>
 
 </LinearLayout>
