--- a/app/src/main/res/layout/leaderboard_item.xml
+++ b/app/src/main/res/layout/leaderboard_item.xml
@@ -1,39 +1,81 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="horizontal" android:layout_width="match_parent"
+    android:padding="16dp"
     android:layout_height="match_parent">
 
+    <android.support.v7.widget.CardView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="5dp"
+        android:background="?android:attr/activatedBackgroundIndicator">
 
-    <TextView
-        android:text="100"
-        android:id="@+id/leaderboard_item_rank"
-        android:layout_weight="1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
 
-    <TextView
-        android:text="abcd"
-        android:id="@+id/leaderboard_item_name"
-        android:layout_weight="25"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+            <RelativeLayout
+                android:id="@+id/circle"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:background="@drawable/oval" >
+
+                <TextView
+                    android:id="@+id/leaderboard_item_rank"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_centerInParent="true"
+                    android:textStyle="bold"
+                    android:textColor="@color/tw__composer_white"
+                    android:text="20" />
+            </RelativeLayout>
+
+            <LinearLayout
+                android:padding="16dp"
+                android:layout_centerHorizontal="true"
+                android:layout_width="match_parent"
+                android:orientation="horizontal"
+                android:layout_height="wrap_content">
+
+                <TextView
+                    android:id="@+id/leaderboard_item_name"
+                    android:text="abcd"
+                    android:layout_weight="50"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" />
+
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:orientation="vertical"
+                    android:layout_height="wrap_content">
+
+                    <TextView
+                        android:text="200"
+                        android:textColor="#000000"
+                        android:layout_weight="2"
+                        android:layout_centerHorizontal="true"
+                        android:id="@+id/leaderboard_item_points"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content" />
+
+                    <TextView
+                        android:text="Points"
+                        android:textSize="10dp"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content" />
+
+                </LinearLayout>
 
 
-    <RelativeLayout
-        android:id="@+id/circle"
-        android:layout_weight="1"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-        android:background="@drawable/oval" >
 
-        <TextView
-            android:id="@+id/leaderboard_item_points"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerInParent="true"
-            android:textStyle="bold"
-            android:textColor="@color/tw__composer_white"
-            android:text="200" />
-    </RelativeLayout>
+            </LinearLayout>
 
-</LinearLayout>
+        </LinearLayout>
+
+
+
+
+    </android.support.v7.widget.CardView>
+
+
+</RelativeLayout>
