--- a/app/src/main/res/layout/leaderboard_item.xml
+++ b/app/src/main/res/layout/leaderboard_item.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="horizontal" android:layout_width="match_parent"
-    android:padding="16dp"
-    android:layout_height="match_parent">
+    android:orientation="horizontal"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content">
 
     <android.support.v7.widget.CardView
         android:layout_width="match_parent"
@@ -11,12 +11,17 @@
         android:background="?android:attr/activatedBackgroundIndicator">
 
         <LinearLayout
+            android:padding="12dp"
+            android:layout_gravity="center_horizontal"
+            android:gravity="center_horizontal"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
             <RelativeLayout
                 android:id="@+id/circle"
                 android:layout_width="50dp"
+                android:padding="16dp"
+                android:layout_marginTop="8dp"
                 android:layout_height="50dp"
                 android:background="@drawable/oval" >
 
@@ -38,8 +43,11 @@
                 android:layout_height="wrap_content">
 
                 <TextView
+                    android:layout_marginTop="4dp"
+                    android:gravity="center_vertical"
                     android:id="@+id/leaderboard_item_name"
                     android:text="abcd"
+                    android:textSize="24dp"
                     android:layout_weight="50"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content" />
@@ -51,6 +59,7 @@
 
                     <TextView
                         android:text="200"
+                        android:textSize="20sp"
                         android:textColor="#000000"
                         android:layout_weight="2"
                         android:layout_centerHorizontal="true"
@@ -59,6 +68,7 @@
                         android:layout_height="wrap_content" />
 
                     <TextView
+                        android:textColor="#000000"
                         android:text="Points"
                         android:textSize="10dp"
                         android:layout_width="wrap_content"
