--- a/app/src/main/res/drawable/oval.xml
+++ b/app/src/main/res/drawable/oval.xml
@@ -2,6 +2,6 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="oval">
     <corners android:radius="10dip"/>
-    <stroke android:color="@color/colorAccent" android:width="5dip"/>
-    <solid android:color="@color/colorAccent"/>
+    <stroke android:color="@color/colorPrimary" android:width="2dip"/>
+    <solid android:color="@color/green_reward"/>
 </shape>
