--- a/app/src/main/res/layout/content_home.xml
+++ b/app/src/main/res/layout/content_home.xml
@@ -4,16 +4,16 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="16dp"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="com.complus.community.HomeActivity"
     tools:showIn="@layout/app_bar_home">
 
     <RelativeLayout
         android:id="@+id/circle"
-        android:layout_width="200dp"
-        android:layout_height="200dp"
+        android:layout_width="150dp"
+        android:layout_height="150dp"
         android:gravity="center"
+        android:layout_marginTop="16dp"
         android:layout_centerHorizontal="true"
         android:layout_gravity="center"
         android:background="@drawable/oval" >
@@ -34,25 +34,31 @@
         android:layout_marginTop="10dp"
         android:id="@+id/btn_claim_points"
         android:layout_below="@id/circle"
-        android:background="@color/colorAccent"
-        android:text="Claim Points"
+        android:background="@color/colorPrimary"
+        android:text="C l a i m   P o i n t s"
+        android:typeface="monospace"
+        android:textStyle="bold"
         android:textAlignment="center"
         android:textColor="@color/tw__solid_white"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
+
+
     <FrameLayout
+        android:id="@+id/home_list_frame"
         android:layout_below="@id/btn_claim_points"
+        android:layout_above="@id/navigation"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
-        <ListView
+        <android.support.v7.widget.RecyclerView
             android:id="@+id/lv_recents"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:divider="@color/tw__solid_white">
 
-        </ListView>
+        </android.support.v7.widget.RecyclerView>
 
         <!--<TextView-->
             <!--android:id="@+id/tv_empty_list"-->
@@ -65,6 +71,15 @@
         <!---->
     </FrameLayout>
 
+
+    <android.support.design.widget.BottomNavigationView
+        android:id="@+id/navigation"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom"
+        android:background="?android:attr/windowBackground"
+        app:menu="@menu/navigation_history"
+        android:layout_alignParentBottom="true" />
 
 
 </RelativeLayout>
