added leaderboard item layout

--- a/app/src/main/res/layout/leaderboard_item.xml
+++ b/app/src/main/res/layout/leaderboard_item.xml
@@ -16,6 +16,7 @@
 
             <RelativeLayout
                 android:id="@+id/circle"
+                android:padding="16dp"
                 android:layout_width="50dp"
                 android:layout_height="50dp"
                 android:background="@drawable/oval" >
