--- a/app/src/main/res/menu/navigation_leaderboard.xml
+++ b/app/src/main/res/menu/navigation_leaderboard.xml
@@ -3,12 +3,12 @@
 
     <item
         android:id="@+id/leaderboard_overall"
-        android:icon="@drawable/ic_home_black_24dp"
+        android:icon="@drawable/ic_overall"
         android:title="Overall" />
 
     <item
         android:id="@+id/leaderboard_local"
-        android:icon="@drawable/ic_dashboard_black_24dp"
+        android:icon="@drawable/ic_local"
         android:title="Local" />
 
 </menu>
