--- a/app/src/main/res/layout/redeem_item.xml
+++ b/app/src/main/res/layout/redeem_item.xml
@@ -5,17 +5,43 @@
     android:orientation="vertical"
     android:layout_height="wrap_content">
 
-    <TextView
-        android:id="@+id/redeem_item_name"
-        android:layout_width="wrap_content"
+    <android.support.v7.widget.CardView
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textAlignment="center"
-        android:text="placeholder"/>
-    <TextView
-        android:text="date"
-        android:id="@+id/redeem_item_date"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_margin="5dp"
+        android:background="?android:attr/activatedBackgroundIndicator">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="?android:attr/activatedBackgroundIndicator"
+            android:orientation="vertical"
+            android:padding="5dp">
+
+            <TextView
+                android:id="@+id/redeem_item_name"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:padding="2dp"
+                android:text="hello"
+                android:textColor="@color/colorPrimary"
+                android:textSize="14dp" />
+
+
+            <TextView
+                android:id="@+id/redeem_item_date"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="bottom|end"
+                android:padding="2dp"
+                android:text="hello"
+                android:textColor="@color/colorPrimary"
+                android:textSize="10dp" />
+
+        </LinearLayout>
+
+
+    </android.support.v7.widget.CardView>
 
 
 </LinearLayout>
