Added QR scanner

--- a/app/src/main/res/layout/activity_reward.xml
+++ b/app/src/main/res/layout/activity_reward.xml
@@ -81,7 +81,7 @@
                 android:textStyle="bold" />
 
             <TextView
-                android:id="@+id/reward_points"
+                android:id="@+id/reward_points_detail"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="200"
