--- a/app/src/main/res/layout/content_rewards.xml
+++ b/app/src/main/res/layout/content_rewards.xml
@@ -12,14 +12,23 @@
     <TextView
         android:id="@+id/rewards_points"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:textAlignment="center"
         android:gravity="center"
-        android:textSize="60sp"
-        android:text="300"
+        android:textSize="100sp"
+        android:text="0"
+        android:typeface="monospace"
+        android:textColor="@color/green_reward"/>
+
+    <TextView
+        android:gravity="center"
+        android:text="Points!"
+        android:textSize="30sp"
         android:typeface="monospace"
         android:textColor="@color/green_reward"
-        android:layout_weight="4"/>
+        android:textAlignment="center"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
 
     <View
         android:layout_width="fill_parent"
