--- a/app/src/main/res/layout/content_rewards.xml
+++ b/app/src/main/res/layout/content_rewards.xml
@@ -12,7 +12,7 @@
     <TextView
         android:id="@+id/rewards_points"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:textAlignment="center"
         android:gravity="center"
         android:textSize="60sp"
