--- a/app/src/main/res/layout/content_rewards.xml
+++ b/app/src/main/res/layout/content_rewards.xml
@@ -12,13 +12,12 @@
     <TextView
         android:id="@+id/rewards_points"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:textAlignment="center"
         android:gravity="center"
-        android:textSize="60sp"
-        android:text="--"
         android:textSize="100sp"
-        android:text="0"
+        android:text="--"
+
         android:typeface="monospace"
         android:textColor="@color/green_reward"/>
 
