--- a/app/src/main/res/layout/activity_complaint.xml
+++ b/app/src/main/res/layout/activity_complaint.xml
@@ -43,6 +43,7 @@
 
 
             <ImageView
+                android:visibility="gone"
                 android:id="@+id/complaint_pic"
                 android:layout_gravity="center"
                 android:layout_width="200dp"
