--- a/app/src/main/res/layout/content_home.xml
+++ b/app/src/main/res/layout/content_home.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="com.complus.community.HomeActivity"
     tools:showIn="@layout/app_bar_home">
@@ -13,7 +14,7 @@
         android:layout_width="150dp"
         android:layout_height="150dp"
         android:gravity="center"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="80dp"
         android:layout_centerHorizontal="true"
         android:layout_gravity="center"
         android:background="@drawable/oval" >
@@ -40,7 +41,7 @@
 
 
     <Button
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="40dp"
         android:id="@+id/btn_claim_points"
         android:layout_below="@id/circle"
         android:background="@color/colorPrimary"
@@ -52,43 +53,19 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
-
-
-    <FrameLayout
-        android:id="@+id/home_list_frame"
-        android:layout_below="@id/btn_claim_points"
-        android:layout_above="@id/navigation"
+    <Button
+        android:layout_marginTop="50dp"
+        android:id="@+id/btn_redeem_points"
+        android:layout_below="@id/circle"
+        android:background="@color/colorPrimary"
+        android:text="R e d e e m   P o i n t s"
+        android:typeface="monospace"
+        android:textStyle="bold"
+        android:textAlignment="center"
+        android:textColor="@color/tw__solid_white"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-
-        <android.support.v7.widget.RecyclerView
-            android:id="@+id/lv_recents"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:divider="@color/tw__solid_white">
-
-        </android.support.v7.widget.RecyclerView>
-
-        <!--<TextView-->
-            <!--android:id="@+id/tv_empty_list"-->
-            <!--android:layout_width="match_parent"-->
-            <!--android:layout_height="wrap_content"-->
-            <!--android:layout_marginTop="200dp"-->
-            <!--android:text="No recents available"-->
-            <!--android:textAlignment="center"-->
-            <!--android:textSize="25sp" />-->
-        <!---->
-    </FrameLayout>
+        android:layout_height="wrap_content" />
 
 
-    <android.support.design.widget.BottomNavigationView
-        android:id="@+id/navigation"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="bottom"
-        android:background="?android:attr/windowBackground"
-        app:menu="@menu/navigation_history"
-        android:layout_alignParentBottom="true" />
 
-
-</RelativeLayout>
+</LinearLayout>
